# mailing_project

./: .flake8  .gitignore  README.md  env.exemple  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
mailing/management/commands/: create_managers_group.py  send_mailings.py
mailing/migrations/: 0001_initial.py  0002_recipient.py  0003_alter_mailing_owner.py  0004_alter_mailing_recipients_delete_client.py  0005_attempt_recipient.py  0006_alter_mailing_options_alter_message_options_and_more.py
templates/: base.html  home.html
templates/mailing/: attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_stats.html  message_confirm_delete.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_form.html  recipient_list.html
templates/registration/: login.html
templates/users/: password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  profile_edit.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
