[project]
name = "mailing-project"
version = "0.1.0"
description = "Джанго-приложение для управления имейл-рассылкой и отслеживания статистики доставки."
authors = [
    {name = "GuyMonagan",email = "werevalkury@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.0,<6.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
